--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,12 +6,14 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - ruby: 3.3
+          - ruby: 3.4
             os: ubuntu-24.04
-          - ruby: 3.2
+          - ruby: 3.3
             os: ubuntu-20.04
+          - ruby: 3.2
+            os: macos-15
           - ruby: 3.1
-            os: macos-latest
+            os: macos-13
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
