--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
             os: macos-15-intel
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v5
+      - uses: actions/checkout@v6
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
@@ -28,7 +28,7 @@ jobs:
         run: sudo apt-get update && sudo apt-get install coinor-libcbc3.1
       - if: ${{ matrix.os == 'ubuntu-22.04' }}
         run: sudo apt-get update && sudo apt-get install coinor-libcbc3
-      - if: ${{ startsWith(matrix.os, 'macos') }}
+      - if: ${{ runner.os == 'macOS' }}
         run: brew install cbc
       - run: bundle exec rake test
 
